--- a/02_parsing.ipynb
+++ b/02_parsing.ipynb
@@ -192,8 +192,16 @@
     "                # create Connection\n",
     "                if positiveIncLanes:  # Way is in OutgoingWays\n",
     "                    laneConnections.append([lanesum+i+1, -i-1 if turnPossibilities['WayDirection'][idx] else i+1])\n",
+    "                    #if idx + i + lanesum == 0:\n",
+    "                    #    laneConnections[-1].append(\"leftmost\")\n",
+    "                    #if idx + i == len(turnPossibilities['Angles'])-1 + turnPossibilities['Lanes'][idx]-1:\n",
+    "                    #    laneConnections[-1].append(\"rightmost\")\n",
     "                else:\n",
     "                    laneConnections.append([-lanesum-i-1, -i-1 if turnPossibilities['WayDirection'][idx] else i+1])\n",
+    "                    if idx + i + lanesum == 0:\n",
+    "                        laneConnections[-1].append(\"rightmost\")\n",
+    "                    if idx + i == len(turnPossibilities['Angles'])-1 + turnPossibilities['Lanes'][idx]-1:\n",
+    "                        laneConnections[-1].append(\"leftmost\")\n",
     "            # extra merging lanes\n",
     "            if turnPossibilities['Lanes'][idx] < lanenumbers and len(self.wayList)==2: \n",
     "                for i in range(lanenumbers-turnPossibilities['Lanes'][idx]):\n",
@@ -485,6 +493,7 @@
     "                previousrNode = node\n",
     "        \n",
     "        self.prepareConnections()\n",
+    "        self.checkFootways()\n",
     "        \n",
     "    def prepareConnections(self):\n",
     "        if len(self.K1_turnLanesDirection) < self.laneNumberDirection:\n",
@@ -500,6 +509,24 @@
     "            self.K1_incomingLanesFromK1.append([])\n",
     "            #self.K2_turnLanesOpposite.append([])\n",
     "            self.K2_ConnectionsTurnLanesOpposite.append([])\n",
+    "            \n",
+    "    def checkFootways(self):\n",
+    "        self.footways = 0\n",
+    "        if 'foot' in self.tags:\n",
+    "            if self.tags['foot'] == 'yes':\n",
+    "                self.footways = 2\n",
+    "                return\n",
+    "        if 'sidewalk' in self.tags:\n",
+    "                #if self.tags['sidewalk'] == 'both' \n",
+    "                self.footways = 2\n",
+    "                return\n",
+    "        if 'footway' in self.tags:\n",
+    "                self.footways = 2\n",
+    "                return\n",
+    "        if 'maxspeed' in self.tags:\n",
+    "            if int(self.tags['maxspeed']) < 31: \n",
+    "                self.footways = 2\n",
+    "                return\n",
     "        \n",
     "    def checkLanes(self):\n",
     "        '''\n",
@@ -873,10 +900,16 @@
     "    #first element:\n",
     "    firstNode = rNode.allrNodes[way.OSMNodes[0]]\n",
     "    if len(firstNode.wayList) == 1:  #firstnode ist sackgasse\n",
-    "        #createEndCap\n",
-    "        createEndCap(way,[firstNode.x,firstNode.y],giveHeading(rNode.allrNodes[way.OSMNodes[1]].x,rNode.allrNodes[way.OSMNodes[1]].y,firstNode.x,firstNode.y),isStartPoint = True)\n",
-    "        #get the full node involved\n",
-    "        Points.append([firstNode.x,firstNode.y, giveHeight(firstNode.x,firstNode.y,minRemoved = True)])\n",
+    "        #get the full node involved but first try to use a point before the endcap\n",
+    "        if distance(firstNode.x,firstNode.y,rNode.allrNodes[way.OSMNodes[1]].x,rNode.allrNodes[way.OSMNodes[1]].y) <= 8.0:\n",
+    "            # try to get the endcap to be at least as far as possible from the edge\n",
+    "            x = 0.9*rNode.allrNodes[way.OSMNodes[1]].x +0.1*firstNode.x\n",
+    "            y = 0.9*rNode.allrNodes[way.OSMNodes[1]].y + 0.1*firstNode.y\n",
+    "        else:\n",
+    "            x,y = getXYPositionFromLineLength(firstNode.x,firstNode.y, giveHeading(firstNode.x,firstNode.y,rNode.allrNodes[way.OSMNodes[1]].x,rNode.allrNodes[way.OSMNodes[1]].y), 8.0)\n",
+    "        Points.append([x,y, giveHeight(x,y,minRemoved = True)])\n",
+    "        createEndCap(way,[x,y],giveHeading(rNode.allrNodes[way.OSMNodes[1]].x,rNode.allrNodes[way.OSMNodes[1]].y,firstNode.x,firstNode.y),isStartPoint = True)\n",
+    "\n",
     "    else: #firstnode is junction\n",
     "        #get the relevant lastPoint as NodePoint\n",
     "        x,y = firstNode.getRelevantLastPoint(way)\n",
@@ -893,10 +926,17 @@
     "    lastNode = rNode.allrNodes[way.OSMNodes[-1]]\n",
     "    if len(lastNode.wayList) == 1:  #firstnode ist sackgasse\n",
     "        #createEndCap()\n",
-    "        createEndCap(way,[lastNode.x,lastNode.y],giveHeading(Points[-1][0],Points[-1][1],lastNode.x,lastNode.y),isStartPoint = False)\n",
+    "        if distance(lastNode.x,lastNode.y,rNode.allrNodes[way.OSMNodes[-2]].x,rNode.allrNodes[way.OSMNodes[-2]].y) <= 8.0:\n",
+    "            # try to get the endcap to be at least as far as possible from the edge\n",
+    "            x = 0.9*rNode.allrNodes[way.OSMNodes[-2]].x +0.1*lastNode.x\n",
+    "            y = 0.9*rNode.allrNodes[way.OSMNodes[-2]].y + 0.1*lastNode.y\n",
+    "        else:\n",
+    "            x,y = getXYPositionFromLineLength(lastNode.x,lastNode.y, giveHeading(lastNode.x,lastNode.y,rNode.allrNodes[way.OSMNodes[-2]].x,rNode.allrNodes[way.OSMNodes[-2]].y), 8.0)\n",
+    "\n",
+    "        createEndCap(way,[x,y],giveHeading(Points[-1][0],Points[-1][1],lastNode.x,lastNode.y),isStartPoint = False)\n",
     "        #get the full node involved\n",
     "        hdgs.append(giveHeading(Points[-1][0],Points[-1][1],lastNode.x,lastNode.y))\n",
-    "        Points.append([lastNode.x,lastNode.y, giveHeight(lastNode.x,lastNode.y,minRemoved = True)])\n",
+    "        Points.append([x,y, giveHeight(x,y,minRemoved = True)])\n",
     "        \n",
     "    else: #lastnode is junction\n",
     "        #get the relevant lastPoint as NodePoint\n",
@@ -1105,17 +1145,27 @@
     "            try: \n",
     "                if predecessorway.id in successorconnections['Direction']:\n",
     "                    for connection in successorconnections['Direction'][predecessorway.id]:\n",
-    "                        self.predecessor2successorLaneConnections.append([connection[1],connectionn[0]])\n",
+    "                        self.predecessor2successorLaneConnections.append([connection[1],connection[0]])\n",
     "            except: pass\n",
     "            try: \n",
     "                if predecessorway.id in successorconnections['Opposite']:\n",
     "                    for connection in successorconnections['Opposite'][predecessorway.id]:\n",
-    "                        predecessor2successorLaneConnections.append([connection[1],connectionn[0]])\n",
+    "                        predecessor2successorLaneConnections.append([connection[1],connection[0]])\n",
     "            except: pass\n",
     "        except: pass\n",
     "        roads = []\n",
     "        for connection in predecessor2successorLaneConnections:\n",
     "            roads.append(JunctionRoad(predecessorway,successorway,connection[0],connection[1],junctionNode,contactPointPredecessor,contactPointSuccessor,roadElements,elevationElements))\n",
+    "            if len(connection) == 3:\n",
+    "                if connection[2] == 'leftmost':\n",
+    "                    roads[-1].leftmostLane = True\n",
+    "                if connection[2] == 'rightmost':\n",
+    "                    roads[-1].rightmostLane = True\n",
+    "                PredecessorDirection = 1 if contactPointPredecessor == \"end\" else -1\n",
+    "                SuccessorDirection = 1 if contactPointSuccessor == \"start\" else -1\n",
+    "                if predecessorway.footways == 2 or predecessorway.footways == PredecessorDirection:\n",
+    "                    if successorway.footways == 2 or successorway.footways == SuccessorDirection:\n",
+    "                        roads[-1].footpath = True\n",
     "        return roads\n",
     "    \n",
     "    def __init__(self,predecessorway,successorway,startlane,endlane,junctionNode,contactPointPredecessor,contactPointSuccessor,roadElements,elevationElements):\n",
@@ -1130,12 +1180,16 @@
     "        waydic[str(startlane)+\"_to_\"+str(endlane)] = self\n",
     "        self.predecessorlane = startlane\n",
     "        self.successorlane = endlane\n",
+    "        self.predecessorway = predecessorway\n",
+    "        self.leftmostLane = False\n",
+    "        self.rightmostLane = False\n",
+    "        self.footpath = False\n",
     "        self.junctionNode = junctionNode\n",
     "        self.contactPointPredecessor = contactPointPredecessor\n",
     "        self.contactPointSuccessor = contactPointSuccessor\n",
     "        self.roadElements = roadElements\n",
     "        self.elevationElements = elevationElements\n",
-    "        self.laneWidth = 4.0\n",
+    "        self.laneWidth = 3.0\n",
     "        length = 0.0\n",
     "        for element in self.roadElements:\n",
     "            length += element[\"length\"]\n",
