--- a/03_xodrwriting.ipynb
+++ b/03_xodrwriting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-10T12:43:03.444532Z",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-10T12:43:03.829628Z",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-10T12:44:10.216363Z",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-10T12:44:17.321218Z",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-10T12:51:08.287197Z",
@@ -175,10 +175,19 @@
     "                        <lane id=\"{0}\" type=\"driving\" level=\"false\">\n",
     "                                        <link>\n",
     "                                        </link>\n",
-    "                                        <width sOffset=\"0.0\" a=\"4.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
+    "                                        <width sOffset=\"0.0\" a=\"3.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
     "                                        <roadMark sOffset=\"0.00\" type=\"{1}\" material=\"standard\" color=\"white\" laneChange=\"none\"/>\n",
     "                        </lane>'''.format(leftlanenumber, \"solid\" if leftlanenumber == road.laneNumberOpposite else \"broken\")\n",
     "            leftlanenumber += 1\n",
+    "        if road.footways == 1 or road.footways == 2:\n",
+    "            leftlanes += '''\n",
+    "                        <lane id=\"{0}\" type=\"sidewalk\" level=\"false\">\n",
+    "                                        <link>\n",
+    "                                        </link>\n",
+    "                                        <width sOffset=\"0.0\" a=\"3.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
+    "                                        <roadMark sOffset=\"0.00\" type=\"{1}\" material=\"standard\" color=\"white\" laneChange=\"none\"/>\n",
+    "                        </lane>'''.format(leftlanenumber, \"none\" )\n",
+    "            \n",
     "        rightlanes = \"\"\n",
     "        rightlanenumber = -1\n",
     "        for i in range(road.laneNumberDirection):\n",
@@ -186,10 +195,18 @@
     "                        <lane id=\"{0}\" type=\"driving\" level=\"false\">\n",
     "                                        <link>\n",
     "                                        </link>\n",
-    "                                        <width sOffset=\"0.0\" a=\"4.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
+    "                                        <width sOffset=\"0.0\" a=\"3.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
     "                                        <roadMark sOffset=\"0.00\" type=\"{1}\" material=\"standard\" color=\"white\" laneChange=\"none\"/>\n",
     "                        </lane>'''.format(rightlanenumber, \"solid\" if rightlanenumber == -road.laneNumberDirection else \"broken\")\n",
     "            rightlanenumber -= 1\n",
+    "        if road.footways == -1 or road.footways == 2:\n",
+    "            rightlanes += '''\n",
+    "                        <lane id=\"{0}\" type=\"sidewalk\" level=\"false\">\n",
+    "                                        <link>\n",
+    "                                        </link>\n",
+    "                                        <width sOffset=\"0.0\" a=\"3.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
+    "                                        <roadMark sOffset=\"0.00\" type=\"{1}\" material=\"standard\" color=\"white\" laneChange=\"none\"/>\n",
+    "                        </lane>'''.format(rightlanenumber, \"none\")\n",
     "        \n",
     "        parts[0] +='''\n",
     "        <road name=\"{0}\" length=\"{1}\" id=\"{2}\" junction=\"-1\">\n",
@@ -241,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-10T12:51:10.767575Z",
@@ -276,6 +293,13 @@
     "                    </connection>'''.format(connectionID, incomingRoad, road.xodrID, \"start\",\n",
     "                                           fromLane, \"-1\")\n",
     "                    connectionID +=1\n",
+    "                    if road.footpath:\n",
+    "                        parts[1] += '''\n",
+    "                    <connection id=\"{0}\" incomingRoad=\"{1}\" connectingRoad=\"{2}\" contactPoint=\"{3}\">\n",
+    "                        <laneLink from=\"{4}\" to=\"{5}\"/>\n",
+    "                    </connection>'''.format(connectionID, incomingRoad, road.xodrID, \"start\",\n",
+    "                                           (abs(int(fromLane))+1)*np.sign(int(fromLane)), \"-2\" if road.rightmostLane else \"1\")\n",
+    "                        connectionID +=1\n",
     "                    \n",
     "                    #create road\n",
     "                    geometry = \"\"\n",
@@ -298,7 +322,35 @@
     "                        <elevation s=\"{0}\" a=\"{1}\" b=\"{2}\" c=\"0.0\" d=\"0.0\"/>'''.format(sum(lengths[:-1]),element[\"zstart\"], element[\"steigung\"])\n",
     "\n",
     "                    name = \"JunctionConnection \"+ roadkey + \" lane \"+lanekey\n",
-    "                    maxspeed = \"30\"\n",
+    "                    maxspeed = '30'\n",
+    "                    try: maxspeed = road.predecessorway.tags[\"maxspeed\"]\n",
+    "                    except: pass\n",
+    "                    leftsidewalk = \"\"\n",
+    "                    if road.footpath and road.leftmostLane:\n",
+    "                        leftsidewalk = '''\n",
+    "                        <left>\n",
+    "                        <lane id=\"1\" type=\"sidewalk\" level=\"false\">\n",
+    "                            <link>\n",
+    "                                <predecessor id=\"{0}\"/>\n",
+    "                                <successor id=\"{1}\"/>\n",
+    "                            </link>\n",
+    "                            <width sOffset=\"0.0\" a=\"3.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
+    "                            <roadMark sOffset=\"0.00\" type=\"none\" material=\"standard\" color=\"white\" laneChange=\"none\"/>\n",
+    "                        </lane>\n",
+    "                        </left>\n",
+    "                        '''.format((abs(int(fromLane))+1)*np.sign(int(fromLane)),(abs(int(toLane))+1)*np.sign(int(toLane)))\n",
+    "                    rightsidewalk = \"\"\n",
+    "                    if road.footpath and road.rightmostLane:\n",
+    "                        rightsidewalk = '''\n",
+    "                        <lane id=\"-2\" type=\"sidewalk\" level=\"false\">\n",
+    "                            <link>\n",
+    "                                <predecessor id=\"{0}\"/>\n",
+    "                                <successor id=\"{1}\"/>\n",
+    "                            </link>\n",
+    "                            <width sOffset=\"0.0\" a=\"3.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
+    "                            <roadMark sOffset=\"0.00\" type=\"none\" material=\"standard\" color=\"white\" laneChange=\"none\"/>\n",
+    "                        </lane>\n",
+    "                        '''.format((abs(int(fromLane))+1)*np.sign(int(fromLane)),(abs(int(toLane))+1)*np.sign(int(toLane)))\n",
     "                    parts[0] +='''\n",
     "        <road name=\"{0}\" length=\"{1}\" id=\"{2}\" junction=\"{3}\">\n",
     "            <link>\n",
@@ -316,7 +368,7 @@
     "        </elevationProfile>\n",
     "             <lanes>\n",
     "                <laneOffset s=\"0.0\" a=\"{0}\" b=\"{1}\" c=\"0.0\" d=\"0.0\"/>'''.format(road.laneOffsetA, road.laneOffsetB) + '''\n",
-    "                <laneSection s=\"0.0\">\n",
+    "                <laneSection s=\"0.0\">{0}'''.format(leftsidewalk)+'''\n",
     "                     <center>\n",
     "                        <lane id=\"0\" type=\"none\" level=\"false\">\n",
     "                            <roadMark sOffset=\"0.0000000000000000e+0\" type=\"none\" material=\"standard\" color=\"yellow\" width=\"1.2500000000000000e-1\" laneChange=\"none\"/>\n",
@@ -328,14 +380,14 @@
     "                                <predecessor id=\"{0}\"/>\n",
     "                                <successor id=\"{1}\"/>\n",
     "                            </link>\n",
-    "                            <width sOffset=\"0.0\" a=\"4.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
+    "                            <width sOffset=\"0.0\" a=\"3.00e+00\" b=\"0.0\" c=\"0.00\" d=\"0.00\"/>\n",
     "                            <roadMark sOffset=\"0.00\" type=\"none\" material=\"standard\" color=\"white\" laneChange=\"none\"/>\n",
-    "                        </lane>\n",
+    "                        </lane>{2}\n",
     "                    </right>\n",
     "                </laneSection>\n",
     "            </lanes>\n",
     "        </road>\n",
-    "        '''.format(fromLane,toLane)\n",
+    "        '''.format(fromLane,toLane,rightsidewalk)\n",
     "        #close junction     \n",
     "        parts[1] += '''\n",
     "        </junction>\n",
@@ -363,22 +415,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-10T12:44:27.345520Z",
      "start_time": "2020-03-10T12:44:26.597223Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "minlon = 7.1584828,minlat= 51.2377326,maxlon = 7.1652904,maxlat = 51.2406203\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import floor, pi\n",
     "import numpy as np\n",
@@ -402,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-10T12:51:28.107427Z",
